split library into categories

--- a/client/room.html
+++ b/client/room.html
@@ -219,6 +219,10 @@
     <div id="statesOverlay" class="overlay">
       <h1>Games</h1>
       <div id="statesList">
+        <template id="template-stateslist-category" type="text/template">
+          <h2 class="title">Title</h2>
+          <div class="list"></div>
+        </template>
         <template id="template-stateslist-entry" type="text/template">
           <img>
           <div class="details">
