--- a/client/room.html
+++ b/client/room.html
@@ -229,7 +229,7 @@
             <a class="bgg" href="">Name (Year)</a>
             <div class="stats"><span class="symbols">[sand_timer]</span> <span class="time">0</span> minutes | <a class="rules"><span class="symbols">[book_open]</span> Rules</a></div>
             <div class="variantsList"></div>
-            <p><button class="prettyButton saveProgress" disabled>Save progress</button><button class="prettyButton edit">Edit</button></p>
+            <p><button class="prettyButton edit">Edit</button><button class="prettyButton star">★</button></p>
           </div>
         </template>
         <template id="template-variantslist-entry" type="text/template">
