--- a/client/room.html
+++ b/client/room.html
@@ -428,6 +428,8 @@
     <div id="traceUI"><input type="range" id="traceInput"></div>
   </div>
 
+  <div id="enlarged" class="hidden"></div>
+
   <script type="module"> //*** CONFIG ***//  //*** JS ***// </script>
 
 </body>
