--- a/client/room.html
+++ b/client/room.html
@@ -428,7 +428,9 @@
     <div id="traceUI"><input type="range" id="traceInput"></div>
   </div>
 
-  <div id="enlarged" class="hidden"></div>
+  <div id="clientPointer">
+    <div id="enlarged" class="hidden"></div>
+  </div>
 
   <script type="module"> //*** CONFIG ***//  //*** JS ***// </script>
 
