--- a/client/room.html
+++ b/client/room.html
@@ -24,14 +24,15 @@
     <button id="playersButton" data-overlay="playerOverlay" class="toolbarButton" ><span class="tooltip">Players & Settings</span></button>
     <div class="divider">&nbsp;</div>
     <button id="editButton" class="toolbarButton"><span class="tooltip">Edit Mode</span></button>
-    <button id="addButton" data-overlay="addOverlay" class="toolbarButton"><span class="tooltip">Add Widget</span></button>
-    <div class="divider">&nbsp;</div>
-    <button id="optionsButton" class="toolbarButton"><span class="tooltip">Sound</span></button>
+    <button id="addButton" data-overlay="addOverlay" class="toolbarButton editOnly"><span class="tooltip">Add Widget</span></button>
+    <button id="tutorialsButton" data-overlay="statesOverlay" class="toolbarButton editOnly" ><span class="tooltip">Tutorials</span></button>
+    <div class="divider playOnly">&nbsp;</div>
+    <button id="optionsButton" class="toolbarButton playOnly"><span class="tooltip">Sound</span></button>
     <span id="options" class="hidden"><button id="muteButton" class="toolbarButton"></button><div class='volumeWrap'><input id="volume" type='range'min="0" max="100" value="30" ></div></span>
-    <button id="lightsButton" class="toolbarButton"><span class="tooltip">Lights</span></button>
+    <button id="lightsButton" class="toolbarButton playOnly"><span class="tooltip">Lights</span></button>
     <div class="divider">&nbsp;</div>
     <button id="fullscreenButton" class="toolbarButton"><span class="tooltip">Fullscreen</span></button>
-    <button id="hideToolbarButton" class="toolbarButton"><span class="tooltip">Hide Toolbar</span></button>
+    <button id="hideToolbarButton" class="toolbarButton playOnly"><span class="tooltip">Hide Toolbar</span></button>
     <div class="spacer">&nbsp;</div>
     <div class="divider">&nbsp;</div>
     <button id="aboutButton" data-overlay="aboutOverlay" class="toolbarButton"><span class="tooltip">About VirtualTabletop.io</span></button>
