added mode filter

--- a/client/room.html
+++ b/client/room.html
@@ -231,6 +231,10 @@
           <option>UN</option><option>US</option>
           <option>BR</option><option>CN</option><option>DE</option><option>GB</option>
         </select>
+        ⚔️ <select id="filterByMode"><option>Any</option>
+          <option>Teams</option><option>VS</option>
+          <option>Coop</option>
+        </select>
       </div>
       <div id="statesList">
         <template id="template-stateslist-category" type="text/template">
