fill language and mode filters with actual game values

--- a/client/room.html
+++ b/client/room.html
@@ -227,14 +227,8 @@
           <option>11</option><option>12</option><option>13</option><option>14</option><option>15</option>
           <option>16</option><option>17</option><option>18</option><option>19</option><option>20</option>
         </select>
-        🌐 <select id="filterByLanguage"><option>Any</option>
-          <option>UN</option><option>US</option>
-          <option>BR</option><option>CN</option><option>DE</option><option>GB</option>
-        </select>
-        ⚔️ <select id="filterByMode"><option>Any</option>
-          <option>Teams</option><option>VS</option>
-          <option>Coop</option>
-        </select>
+        🌐 <select id="filterByLanguage"></select>
+        ⚔️ <select id="filterByMode"></select>
       </div>
       <div id="statesList">
         <template id="template-stateslist-category" type="text/template">
