added type filter

--- a/client/room.html
+++ b/client/room.html
@@ -220,6 +220,9 @@
       <h1>Games</h1>
       <div id="stateFilters">
         🔍 <input id="filterByText" />
+        ♟️ <select id="filterByType"><option>Any</option>
+          <option selected>Games</option><option>Tutorials</option><option>Assets</option>
+        </select>
         👪 <select id="filterByPlayers"><option>Any</option>
           <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
           <option>6</option><option>7</option><option>8</option><option>9</option><option>10</option>
