added duration filter dropdown

--- a/client/room.html
+++ b/client/room.html
@@ -229,6 +229,9 @@
           <option>11</option><option>12</option><option>13</option><option>14</option><option>15</option>
           <option>16</option><option>17</option><option>18</option><option>19</option><option>20</option>
         </select>
+        ⏳ <select id="filterByDuration"><option>Any</option>
+          <option value="0-30">&lt;= 30 minutes</option><option value="31-60">30-60 minutes</option><option value="61-999">&gt; 60 minutes</option>
+        </select>
         🌐 <select id="filterByLanguage"></select>
         ⚔️ <select id="filterByMode"></select>
       </div>
