added attribution to the game details overlay

--- a/client/room.html
+++ b/client/room.html
@@ -269,6 +269,8 @@
       <div class="stats"><span class="symbols">[sand_timer]</span> <span class="time">0</span> minutes | <a class="rules"><span class="symbols">[book_open]</span> Rules</a></div>
       <div class="variantsList"></div>
       <button class="prettyButton edit">Edit</button>
+      <h3>Attribution</h3>
+      <p id="stateAttribution"></p>
     </div>
 
     <div id="stateEditOverlay" class="overlay">
