oops, my brain switched to German after Spiel des Jahres

--- a/client/room.html
+++ b/client/room.html
@@ -293,8 +293,8 @@
         <img src="assets/1067972190_27366">
         <h1>Similar to: Hare & Tortoise (1973)</h1>
         <div><i class="material-icons">military_tech</i> Spiel des Jahres 2001</div>
-        <div><i class="material-icons">link</i> <a href="https://boardgamegeek.com/boardgame/361/hare-tortoise" id="detailsSimilarBGG"><span class="symbols">[external]</span>Seite auf BoardGameGeek.com</span></div>
-        <div><i class="material-icons">movie</i> <a href="https://www.youtube.com/watch?v=R1qh-lhxy9s" id="detailsSimilarRules"><span class="symbols">[external]</span>How To Play auf YouTube.com</span></div>
+        <div><i class="material-icons">link</i> <a href="https://boardgamegeek.com/boardgame/361/hare-tortoise" id="detailsSimilarBGG"><span class="symbols">[external]</span>Page on BoardGameGeek.com</span></div>
+        <div><i class="material-icons">movie</i> <a href="https://www.youtube.com/watch?v=R1qh-lhxy9s" id="detailsSimilarRules"><span class="symbols">[external]</span>How To Play on YouTube.com</span></div>
       </div>
       <template id="template-variantslist-entry" type="text/template">
         <button class="prettyButton play">Play: <span class="language">🇺🇸</span><span class="symbols"> [group]</span><span class="players">0</span><br><span class="variant"></span></button>
