added a clear button to the search box

--- a/client/room.html
+++ b/client/room.html
@@ -220,7 +220,8 @@
       <div id="stateFilters">
         <span id="filterByTextWrapper">
           <i class="material-icons">search</i>
-          <input id="filterByText" />
+          <input id="filterByText" placeholder="Search" />
+          <i class="material-icons" id="clearSearch">close</i>
         </span>
         <span id="filterByTypeWrapper">
           <i class="material-icons">casino</i>
@@ -279,7 +280,7 @@
     </div>
 
     <div id="stateDetailsOverlay" class="overlay">
-      <button class="prettyButton close">X</button>
+      <button class="prettyButton close"><i class="material-icons">close</i></button>
       <div id="mainDetails">
         <img>
         <button class="prettyButton star">★</button>
