--- a/client/room.html
+++ b/client/room.html
@@ -162,26 +162,28 @@
     </div>
 
     <div id="addOverlay" class="overlay">
-      <div class="category">
-        <h2>Cards</h2>
-        <button class="ui-button" id="addHand">Add hand</button>
-      </div>
-      <div class="category">
-        <h2>Game Pieces</h2>
-      </div>
-      <div class="category">
-        <h2>Interactive</h2>
-        <button class="ui-button" id="addCanvas">Add Canvas</button>
-        <button class="ui-button" id="addSeat">Add Seat</button>
-      </div>
-      <div class="category">
-        <h2>Decorative</h2>
-      </div>
-      <div class="category">
-        <h2>Custom</h2>
-        <button class="ui-button" id="uploadBoard">Upload Board</button>
-        <button class="ui-button" id="uploadToken">Upload Token</button>
-        <button class="ui-button" id="addBasicWidget">Add Basic Widget</button>
+      <div id="gridContainerAddOverlay">
+        <div class="category" id="CardsSection">
+          <h2>Cards</h2>
+          <button class="ui-button" id="addHand">Add hand</button>
+        </div>
+        <div class="category" id="GamePiecesSection">
+          <h2>Game Pieces</h2>
+        </div>
+        <div class="category" id="InteractiveSection">
+          <h2>Interactive</h2>
+          <button class="ui-button" id="addCanvas">Add Canvas</button>
+          <button class="ui-button" id="addSeat">Add Seat</button>
+        </div>
+        <div class="category" id="DecorativeSection">
+          <h2>Decorative</h2>
+        </div>
+        <div class="category" id="CustomSection">
+          <h2>Custom</h2>
+          <button class="ui-button" id="uploadBoard">Upload Board</button>
+          <button class="ui-button" id="uploadToken">Upload Token</button>
+          <button class="ui-button" id="addBasicWidget">Add Basic Widget</button>
+        </div>
       </div>
     </div>
 
