--- a/client/room.html
+++ b/client/room.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <title>VirtualTabletop.io</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <link rel="icon" sizes="any" href="/i/branding/favicon-32.png"/>
-  <link rel="icon" type="image/svg+xml" href="/i/branding/favicon.svg"/>
-  <link rel="apple-touch-icon" sizes="180x180" href="/i/branding/ios-icon.png">
-  <link rel="manifest" href="/i/branding/manifest.json">
-  <link rel="mask-icon" href="/i/branding/mask-icon.svg">
+  <link rel="icon" sizes="any" href="i/branding/favicon-32.png"/>
+  <link rel="icon" type="image/svg+xml" href="i/branding/favicon.svg"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="i/branding/ios-icon.png">
+  <link rel="manifest" href="i/branding/manifest.json">
+  <link rel="mask-icon" href="i/branding/mask-icon.svg">
   <script src="https://cdn.jsdelivr.net/combine/npm/vue@3.0.7/dist/vue.global.prod.js,npm/jszip@3.6.0/dist/jszip.min.js"></script>
   <base target="_blank">
   <style> /*** CSS ***/ </style>
@@ -25,8 +25,10 @@
     <div class="divider">&nbsp;</div>
     <button id="editButton" class="toolbarButton"><span class="tooltip">Edit Mode</span></button>
     <button id="addButton" data-overlay="addOverlay" class="toolbarButton"><span class="tooltip">Add Widget</span></button>
+    <div class="divider">&nbsp;</div>
     <button id="optionsButton" class="toolbarButton"><span class="tooltip">Sound</span></button>
     <span id="options" class="hidden"><button id="muteButton" class="toolbarButton"></button><div class='volumeWrap'><input id="volume" type='range'min="0" max="100" value="30" ></div></span>
+    <button id="lightsButton" class="toolbarButton"><span class="tooltip">Lights</span></button>
     <div class="divider">&nbsp;</div>
     <button id="fullscreenButton" class="toolbarButton"><span class="tooltip">Fullscreen</span></button>
     <button id="hideToolbarButton" class="toolbarButton"><span class="tooltip">Hide Toolbar</span></button>
@@ -160,26 +162,28 @@
     </div>
 
     <div id="addOverlay" class="overlay">
-      <div class="category">
-        <h2>Cards</h2>
-        <button class="ui-button" id="addHand">Add hand</button>
-      </div>
-      <div class="category">
-        <h2>Game Pieces</h2>
-      </div>
-      <div class="category">
-        <h2>Interactive</h2>
-        <button class="ui-button" id="addCanvas">Add Canvas</button>
-        <button class="ui-button" id="addSeat">Add Seat</button>
-      </div>
-      <div class="category">
-        <h2>Decorative</h2>
-      </div>
-      <div class="category">
-        <h2>Custom</h2>
-        <button class="ui-button" id="uploadBoard">Upload Board</button>
-        <button class="ui-button" id="uploadToken">Upload Token</button>
-        <button class="ui-button" id="addBasicWidget">Add Basic Widget</button>
+      <div id="gridContainerAddOverlay">
+        <div class="category" id="CardsSection">
+          <h2>Cards</h2>
+          <button class="ui-button" id="addHand">Add hand</button>
+        </div>
+        <div class="category" id="GamePiecesSection">
+          <h2>Game Pieces</h2>
+        </div>
+        <div class="category" id="InteractiveSection">
+          <h2>Interactive</h2>
+          <button class="ui-button" id="addCanvas">Add Canvas</button>
+          <button class="ui-button" id="addSeat">Add Seat</button>
+        </div>
+        <div class="category" id="DecorativeSection">
+          <h2>Decorative</h2>
+        </div>
+        <div class="category" id="CustomSection">
+          <h2>Custom</h2>
+          <button class="ui-button" id="uploadBoard">Upload Board</button>
+          <button class="ui-button" id="uploadToken">Upload Token</button>
+          <button class="ui-button" id="addBasicWidget">Add Basic Widget</button>
+        </div>
       </div>
     </div>
 
@@ -335,8 +339,8 @@
           <p>This project is licensed under GPLv3 and is <a href="https://github.com/ArnoldSmith86/virtualtabletop">available on GitHub</a>.</p>
         </div>
         <div class="about_joinus">
-          <a href="https://discord.gg/CEZz7wny9T"><img src="/i/branding/discord-logo.svg" /><br>Come join our discord server.</a>
-          <a href="https://github.com/ArnoldSmith86/virtualtabletop/wiki"><img src="/i/branding/github-logo.svg" /><br>Check out our wiki page for helpful information about how to make your own games.</a>
+          <a href="https://discord.gg/CEZz7wny9T"><img src="i/branding/discord-logo.svg" /><br>Come join our discord server.</a>
+          <a href="https://github.com/ArnoldSmith86/virtualtabletop/wiki"><img src="i/branding/github-logo.svg" /><br>Check out our wiki page for helpful information about how to make your own games.</a>
         </div>
       </div>
       <div class="content-body">
@@ -426,7 +430,9 @@
     <div id="traceUI"><input type="range" id="traceInput"></div>
   </div>
 
-  <div id="enlarged" class="hidden"></div>
+  <div id="clientPointer">
+    <div id="enlarged" class="hidden"></div>
+  </div>
 
   <script type="module"> //*** CONFIG ***//  //*** JS ***// </script>
 
