--- a/client/room.html
+++ b/client/room.html
@@ -284,18 +284,13 @@
       <div id="mainDetails">
         <img>
         <button class="prettyButton star">★</button>
-        <h1>Game title</h1>
-        <div><i class="material-icons">schedule</i> Time: <span id="detailsTime">30</span> minutes</div>
-        <div><i class="material-icons">groups</i> Mode: <span id="detailsMode">vs</span></div>
-        <div><i class="material-icons">psychology</i> Skill: <span id="detailsSkill">strategy and luck</span></div>
-        <p id="stateDescription"></p>
-      </div>
-      <div id="similarDetails">
-        <img src="assets/1067972190_27366">
-        <h1>Similar to: Hare & Tortoise (1973)</h1>
-        <div><i class="material-icons">military_tech</i> Spiel des Jahres 2001</div>
-        <div><i class="material-icons">link</i> <a href="https://boardgamegeek.com/boardgame/361/hare-tortoise" id="detailsSimilarBGG"><span class="symbols">[external]</span>Page on BoardGameGeek.com</span></div>
-        <div><i class="material-icons">movie</i> <a href="https://www.youtube.com/watch?v=R1qh-lhxy9s" id="detailsSimilarRules"><span class="symbols">[external]</span>How To Play on YouTube.com</span></div>
+        <div class="details">
+          <h1>Game title</h1>
+          <div><i class="material-icons">schedule</i> Time: <span id="detailsTime">30</span> minutes</div>
+          <div><i class="material-icons">groups</i> Mode: <span id="detailsMode">vs</span></div>
+          <div><i class="material-icons">psychology</i> Skill: <span id="detailsSkill">strategy and luck</span></div>
+          <p id="stateDescription"></p>
+        </div>
       </div>
       <template id="template-variantslist-entry" type="text/template">
         <img class="variant-image" />
@@ -308,11 +303,20 @@
         </div>
         <div class="has-attribution"><i class="icon material-icons accordion-item-toggle">attribution</i></div>
         <div class="language-info"><i class="material-icons">language</i><span class="language"></span></div>
-        <div class="player-number-info"><i class="material-icons">groups</i><span class="players">0</span></div>
+        <div class="player-number-info"><i class="material-icons">person</i><span class="players">0</span></div>
         <button class="play play-button hide-app"><i class="material-icons">play_arrow</i>PLAY</button>
       </template>
       <div id="variantsList">
         <div class="variantsList"></div>
+      </div>
+      <div id="similarDetails">
+        <img src="assets/1067972190_27366">
+        <div class="details">
+          <h1>Similar to: Hare & Tortoise (1973)</h1>
+          <div><i class="material-icons">military_tech</i> Spiel des Jahres 2001</div>
+          <div><i class="material-icons">link</i> <a href="https://boardgamegeek.com/boardgame/361/hare-tortoise" id="detailsSimilarBGG"><span class="symbols">[external]</span>Page on BoardGameGeek.com</span></div>
+          <div><i class="material-icons">movie</i> <a href="https://www.youtube.com/watch?v=R1qh-lhxy9s" id="detailsSimilarRules"><span class="symbols">[external]</span>How To Play on YouTube.com</span></div>
+        </div>
       </div>
       <button class="prettyButton edit">Edit</button>
       <div id="prevState" class="roomState">
