removed extra `</span>`

--- a/client/room.html
+++ b/client/room.html
@@ -203,7 +203,7 @@
       </div>
       <div id="playerList">
         <template id="template-playerlist-entry" type="text/template">
-          <input type="color" class="teamColor"></span> <input class="playerName" />
+          <input type="color" class="teamColor"> <input class="playerName" />
         </template>
         <label class="me ui-line" data-label="Me »"> </label>
         <label class="otherPlayers ui-line" data-label="Other Players »"> </label>
