--- a/client/room.html
+++ b/client/room.html
@@ -282,13 +282,18 @@
     <div id="stateDetailsOverlay" class="overlay">
       <button icon="close"></button>
       <div id="mainDetails">
-        <img data-field="image" data-target="src">
-        <button class="prettyButton star">★</button>
+        <div id="mainImage">
+          <img data-field="image" data-target="src">
+          <button class="prettyButton star">★</button>
+          <div>
+            <button icon="image" data-field="image" data-target="value" data-forceshow="true">Change</button>
+          </div>
+        </div>
         <div class="details">
           <h1 data-field="name"></h1>
-          <div data-showFor="time"><i class="material-icons">schedule</i> Time: <span data-field="time"></span> minutes</div>
-          <div data-showFor="mode"><i class="material-icons">groups</i> Mode: <span data-field="mode"></span></div>
-          <div data-showFor="skill"><i class="material-icons">psychology</i> Skill: <span data-field="skill"></span></div>
+          <div data-showfor="time"><i class="material-icons">schedule</i> Time: <span data-field="time"></span> minutes</div>
+          <div data-showfor="mode"><i class="material-icons">groups</i> Mode: <span data-field="mode"></span></div>
+          <div data-showfor="skill"><i class="material-icons">psychology</i> Skill: <span data-field="skill"></span></div>
           <p data-field="description"></p>
         </div>
       </div>
@@ -310,12 +315,17 @@
         <div class="variantsList"></div>
       </div>
       <div id="similarDetails">
-        <img data-field="similarImage" data-target="src">
+        <div id="similarImage">
+          <img data-field="similarImage" data-target="src">
+          <div>
+            <button icon="image" data-field="similarImage" data-target="value" data-forceshow="true">Change</button>
+          </div>
+        </div>
         <div class="details">
-          <h1 data-showFor="similarName">Similar to: <span data-field="similarName"></span><span data-showFor="year"> (<span data-field="year"></span>)</span></h1>
-          <div data-showFor="similarAwards"><i class="material-icons">military_tech</i> <span data-field="similarAwards"></span></div>
-          <div data-showFor="similarLink"><i class="material-icons">link</i> <a data-field="similarLink" data-target="href"><span class="symbols">[external]</span>Page on BoardGameGeek.com</span></div>
-          <div data-showFor="similarVideo"><i class="material-icons">movie</i> <a data-field="similarVideo" data-target="href"><span class="symbols">[external]</span>How To Play on YouTube.com</span></div>
+          <h1 data-showfor="similarName">Similar to: <span data-field="similarName"></span><span data-showfor="year"> (<span data-field="year"></span>)</span></h1>
+          <div data-showfor="similarAwards"><i class="material-icons">military_tech</i> <span data-field="similarAwards"></span></div>
+          <div data-showfor="similarLink"><i class="material-icons">link</i> <a data-field="similarLink" data-target="href">Details on BoardGameGeek.com</a></div>
+          <div data-showfor="similarVideo"><i class="material-icons">movie</i> <a data-field="similarVideo" data-target="href">How To Play on YouTube.com</a></div>
         </div>
       </div>
       <button icon="edit">Edit</button>
@@ -337,11 +347,11 @@
         <button class="prettyButton next"><i class="material-icons">arrow_forward</i></button>
       </div>
       <div id="helpTexts">
-        <h3 data-showFor="ruleText">How to play the game</h3>
+        <h3 data-showfor="ruleText">How to play the game</h3>
         <p data-field="ruleText"></p>
-        <h3 data-showFor="helpText">How to use this implementation</h3>
+        <h3 data-showfor="helpText">How to use this implementation</h3>
         <p data-field="helpText"></p>
-        <h3 data-showFor="attribution">Attribution</h3>
+        <h3 data-showfor="attribution">Attribution</h3>
         <p data-field="attribution"></p>
       </div>
     </div>
@@ -388,6 +398,26 @@
         <button class="ui-button share share-game">Share link</button>
         <button class="ui-button download download-game">Download</button>
         <button class="ui-button red remove remove-game">Remove</button>
+      </div>
+    </div>
+
+    <div id="updateImageOverlay" class="overlay">
+      <h1>Update image</h1>
+      <div>
+        <div id="updatePreviousImage">
+          <h2>Previous image</h2>
+          <img class="previous">
+        </div>
+        <div id="updateCurrentImage">
+          <h2>New image<button icon="upload">Upload new image</button></h2>
+          <img class="current">
+          <label for="updateImageURL">Enter custom URL:</label> <input class="current" id="updateImageURL">
+        </div>
+      </div>
+      <div id="updateButtonBar">
+        <button icon="undo">Use previous image</button>
+        <button icon="image_not_supported">Use no image</button>
+        <button icon="check">Use new image</button>
       </div>
     </div>
 
