improved responsive layout of update image overlay

--- a/client/room.html
+++ b/client/room.html
@@ -409,7 +409,7 @@
           <img class="previous">
         </div>
         <div id="updateCurrentImage">
-          <h2>New image<button icon="upload">Upload new image</button></h2>
+          <h2>New image<button icon="upload">Upload</button></h2>
           <img class="current">
           <label for="updateImageURL">Enter custom URL:</label> <input class="current" id="updateImageURL">
         </div>
