hide similar details and texts if they are completely empty

--- a/client/room.html
+++ b/client/room.html
@@ -314,7 +314,7 @@
       <div id="variantsList">
         <div class="variantsList"></div>
       </div>
-      <div id="similarDetails">
+      <div id="similarDetails" data-showfor="similarImage|similarName|similarAwards|similarLink|similarVideo">
         <div id="similarImage">
           <img data-field="similarImage" data-target="src">
           <div>
@@ -346,7 +346,7 @@
         </div>
         <button class="prettyButton next"><i class="material-icons">arrow_forward</i></button>
       </div>
-      <div id="helpTexts">
+      <div id="helpTexts" data-showfor="ruleText|helpText|attribution">
         <h3 data-showfor="ruleText">How to play the game</h3>
         <p data-field="ruleText"></p>
         <h3 data-showfor="helpText">How to use this implementation</h3>
