--- a/client/room.html
+++ b/client/room.html
@@ -417,9 +417,14 @@
       <div id="jeWidgetLayer11"></div>
       <div id="jeWidgetLayer12"></div>
     </div>
-    <div id="jeTextHighlight"></div>
-    <div id="jeText" contenteditable="true" spellcheck="false"></div>
-    <div id="jeMouseCoords"></div>
+
+    <div id="jeEditArea">
+      <div id="jeEditHeader"></div>
+      <div id="jeMouseCoords"></div>
+      <div id="jeTree"></div>
+      <div id="jeTextHighlight"></div>
+      <div id="jeText" contenteditable="true" spellcheck="false"></div>
+    </div>
     <div id="jeCommands"></div>
     <div id="jeLogWrapper">
       <div id="jeLog"><h1>No debug information yet.</h1></div>
