--- a/client/room.html
+++ b/client/room.html
@@ -422,6 +422,7 @@
       <div id="jeEditHeader"></div>
       <div id="jeMouseCoords"></div>
       <div id="jeTree"></div>
+      <div id="jeResize"></div>
       <div id="jeTextHighlight"></div>
       <div id="jeText" contenteditable="true" spellcheck="false"></div>
     </div>
