--- a/client/room.html
+++ b/client/room.html
@@ -327,8 +327,10 @@
         <div class="details">
           <h1 data-showfor="similarName">Similar to: <span data-field="similarName"></span><span data-showfor="year"> (<span data-field="year"></span>)</span></h1>
           <div data-showfor="similarAwards"><i class="material-icons">military_tech</i> <span data-field="similarAwards"></span></div>
-          <div data-showfor="similarLink"><i class="material-icons">link</i> <a data-field="similarLink" data-target="href">Details on BoardGameGeek.com</a></div>
-          <div data-showfor="similarVideo"><i class="material-icons">movie</i> <a data-field="similarVideo" data-target="href">How To Play on YouTube.com</a></div>
+          <div data-showfor="similarDetailsLink" class="hideForEdit"><i class="material-icons">info</i> <a data-field="similarDetailsLink" data-target="href">Game details on <i class="material-icons intext">launch</i> <span id="similarDetailsDomain"></span></a></div>
+          <div class="onlyForEdit"><i class="material-icons">info</i> Game details link: <span data-field="similarDetailsLink"></span></div>
+          <div data-showfor="similarRulesLink" class="hideForEdit"><i class="material-icons">auto_stories</i> <a data-field="similarRulesLink" data-target="href">Rules overview on <i class="material-icons intext">launch</i> <span id="similarRulesDomain"></span></a></div>
+          <div class="onlyForEdit"><i class="material-icons">auto_stories</i> Rules overview link: <span data-field="similarRulesLink"></span></div>
         </div>
       </div>
       <button icon="edit" class="hideForEdit">Edit</button>
