allow sanitized HTML in ruleText, helpText and attribution

--- a/client/room.html
+++ b/client/room.html
@@ -353,11 +353,11 @@
       </div>
       <div id="helpTexts" data-showfor="ruleText|helpText|attribution">
         <h3 data-showfor="ruleText">How to play the game</h3>
-        <p data-field="ruleText"></p>
+        <p data-field="ruleText" data-html="true"></p>
         <h3 data-showfor="helpText">How to use this implementation</h3>
-        <p data-field="helpText"></p>
+        <p data-field="helpText" data-html="true"></p>
         <h3 data-showfor="attribution">Attribution</h3>
-        <p data-field="attribution"></p>
+        <p data-field="attribution" data-html="true"></p>
       </div>
     </div>
 
