added a Discard button when editing a state

--- a/client/room.html
+++ b/client/room.html
@@ -280,7 +280,8 @@
     </div>
 
     <div id="stateDetailsOverlay" class="overlay" class="notEditing">
-      <button icon="close"></button>
+      <button icon="close" class="hideForEdit" id="closeDetails">Close</button>
+      <button icon="close" class="onlyForEdit" id="discardDetails">Discard</button>
       <div id="mainDetails">
         <div id="mainImage">
           <img data-field="image" data-target="src">
