work in progress implementation of tabbed toolbar

--- a/client/room.html
+++ b/client/room.html
@@ -19,9 +19,10 @@
 <body>
 
   <div id="toolbar">
-    <button id="statesButton" data-overlay="statesOverlay" class="toolbarButton" ><span class="tooltip">Game Library</span></button>
-    <div class="divider">&nbsp;</div>
+    <button id="activeGameButton" class="active toolbarButton" ><span class="tooltip">Active Game</span></button>
+    <button id="statesButton" data-overlay="statesOverlay" class="toolbarButton" ><span class="tooltip">Game Shelf</span></button>
     <button id="playersButton" data-overlay="playerOverlay" class="toolbarButton" ><span class="tooltip">Players & Settings</span></button>
+    <div class="divider">&nbsp;</div>
     <div class="divider">&nbsp;</div>
     <button id="editButton" class="toolbarButton"><span class="tooltip">Edit Mode</span></button>
     <button id="addButton" data-overlay="addOverlay" class="toolbarButton"><span class="tooltip">Add Widget</span></button>
