added read-only button for public library games

--- a/client/room.html
+++ b/client/room.html
@@ -335,6 +335,7 @@
           <div class="onlyForEdit"><i class="material-icons">auto_stories</i> Rules overview link: <span data-field="rules"></span></div>
         </div>
       </div>
+      <button icon="edit_off" disabled>Read-only</button>
       <button icon="edit" class="hideForEdit">Edit</button>
       <button icon="save" class="onlyForEdit">Save</button>
       <div id="prevState" class="roomState">
