Add search box.

--- a/client/room.html
+++ b/client/room.html
@@ -421,6 +421,7 @@
     <div id="jeEditArea">
       <div id="jeEditHeader"></div>
       <div id="jeMouseCoords"></div>
+      <div id="jeWidgetSearch"></div>
       <div id="jeTree"></div>
       <div id="jeResize"></div>
       <div id="jeTextHighlight"></div>
