--- a/client/room.html
+++ b/client/room.html
@@ -419,7 +419,7 @@
     </div>
 
     <div id="jeEditArea">
-      <div id="jeEditHeader"></div>
+      <div id="jeEditHeader">CTRL-click a widget on\nthe left to edit it.</div>
       <div id="jeMouseCoords"></div>
       <div id="jeWidgetSearch"></div>
       <div id="jeTree"></div>
