--- a/client/room.html
+++ b/client/room.html
@@ -421,8 +421,12 @@
     <div id="jeEditArea">
       <div id="jeEditHeader">CTRL-click a widget on<br>the left to edit it.</div>
       <div id="jeMouseCoords"></div>
-      <div id="jeWidgetSearch"></div>
       <div id="jeTree"></div>
+      <div id="jeWidgetSearch">
+        <label for="jeWidgetSearchBox" class="extern">Search Room:</label>
+        <input id="jeWidgetSearchBox">
+      </div>
+      <div id="jeWidgetSearchResults"></div>
       <div id="jeResize"></div>
       <div id="jeTextHighlight"></div>
       <div id="jeText" contenteditable="true" spellcheck="false"></div>
